backend-deployment/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: propati-api-service
  namespace: propati
spec:
  type: NodePort
  ports:
    - port: 8081
      nodePort: 30002
      protocol: TCP
